package cn.edu.scnu.rank;


/**
 * @author 黄彪骐
 */
public enum Difficulty{
    BEGINNER, // 等级1：入门模式 
    BASIC, // 等级2：基础模式
    INTERMEDIATE, // 等级3：综合模式
    ADVANCED, // 等级4：困难模式
    EXPERT, // 等级5：专家模式
}
